--- a/ch3.tex
+++ b/ch3.tex
@@ -23,7 +23,8 @@ other people as useful.
 \hspace{2cm}--- Donald Knuth, \emph{Computer Programming as an Art}
 \end{quote}
 
-
 \section{Introduction}\label{S.intro3}
 
-We begin this chapter by \ldots
+This section will outline what the input data might look like, including data
+sources.  It will outline what form the output data and metrics should take.
+
