--- a/ch4.tex
+++ b/ch4.tex
@@ -16,9 +16,14 @@
 \chapter{Methodology}\label{C.methodology}
 
 \begin{quote}
-\textit{Research is what I'm doing when I don't know what I'm doing.} 
+Just as the largest library, badly arranged, is not so useful as a very moderate
+one that is well arranged, so the greatest amount of knowledge, if not
+elaborated by our own thoughts, is worth much less than a far smaller volume
+that has been abundantly and repeatedly though over.  For only by universally
+combining what we know, by comparing every truth with every other, do we fully
+assimilate our own knowledge and get it into our power.
 
---- Werner von Braun
+\hspace{2cm}--- Arthur Schopenhauer, \emph{On Thinking for Oneself}
 \end{quote}
 
 \section{Introduction}\label{S.intro4}
