--- a/thesis.bib
+++ b/thesis.bib
@@ -213,24 +213,34 @@
 }
 
 @article{Papavasileiou:2007,
-title = {Optimize Manufacturing of Pharmaceutical Products with Process Simulation and Production Scheduling Tools},
-journal = {Chemical Engineering Research and Design},
-volume = {85},
-number = {7},
-pages = {1086--1097},
-year = {2007},
-doi = {10.1205/cherd06240},
-author = {V. Papavasileiou and A. Koulouris and C. Siletti and D. Petrides},
+  title = {Optimize Manufacturing of Pharmaceutical Products with Process Simulation and Production Scheduling Tools},
+  journal = {Chemical Engineering Research and Design},
+  volume = {85},
+  number = {7},
+  pages = {1086--1097},
+  year = {2007},
+  doi = {10.1205/cherd06240},
+  author = {V. Papavasileiou and A. Koulouris and C. Siletti and D. Petrides},
 }
 
 @article{Petrides:2011,
   title={Optimizing the design of operation of fill-finish facilities using process simulation and scheduling tools},
   author={Petrides, D and Siletti, C and Jimenez, J and Psathas, P and Mannion, Y},
-  journal={Pharmaceutical Eng},
+  journal={Pharmaceutical Engineering},
   volume={31},
   number={2},
   pages={1--10},
   year={2011},
+}
+
+@article{Toumi:2010,
+  title={Design and optimization of a large scale biopharmaceutical facility using process simulation and scheduling tools},
+  author={Toumi, Abdelaziz and Jurgens, C and Jungo, Carmen and Maier, B and Papavasileiou, Victor and Petrides, D},
+  journal={Pharmaceutical Engineering},
+  volume={30},
+  number={2},
+  pages={1--9},
+  year={2010},
 }
 
 @Article{Petrides:2014,
@@ -355,17 +365,26 @@ author = {Sangdae, Park and Jung, Jae Hak},
 %    Books                                                                     %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@book{Schaschke:2014,
+  author = {Carl Schaschke},
+  title = {A Dictionary of Chemical Engineering},
+  year = {2014},
+  publisher = {Oxford University Press},
+  address = {Oxford},
+  doi = {10.1093/acref/9780199651450.001.0001},
+}
+
 @Inbook{Schaus:2012,
   author={Schaus, Pierre and Régin, Jean-Charles and Van Schaeren, Rowan and Dullaert, Wout and Raa, Birger},
   editor={Milano, Michela},
   chapter={Cardinality Reasoning for Bin-Packing Constraint: Application to a Tank Allocation Problem},
   title={Principles and Practice of Constraint Programming: 18th International Conference, CP 2012, Québec City, QC, Canada, October 8-12, 2012. Proceedings},
   year={2012},
-  publisher={Springer Berlin Heidelberg},
+  publisher={Springer},
   address={Berlin, Heidelberg},
   pages={815--822},
   isbn={978-3-642-33558-7},
-  doi={10.1007/978-3-642-33558-7{\_}58},
+  doi={10.1007/978-3-642-33558-7_58},
 }
 
 
@@ -387,13 +406,12 @@ author = {Sangdae, Park and Jung, Jae Hak},
 %    Misc                                                                      %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-@misc {Schaschke:2014,
-  author = {Carl Schaschke},
-  title = {A Dictionary of Chemical Engineering},
+@misc{Otto:2014,
+  author = {Ralf Otto and Alberto Santagostino and Ulf Schrader},
+  title = {Rapid growth in biopharma: Challenges and opportunities},
+  howpublished = {online},
+  url = {http://www.mckinsey.com/industries/pharmaceuticals-and-medical-products/our-insights/rapid-growth-in-biopharma},
   year = {2014},
-  publisher = {Oxford University Press},
-  address = {Oxford},
-  isbn = {9780199651450},
-  doi = {10.1093/acref/9780199651450.001.0001},
+  month = {12},
+  note = {Accessed 8\textsuperscript{th} June 2016},
 }
-
