--- a/thesis.tex
+++ b/thesis.tex
@@ -37,6 +37,7 @@ subfigure}
 \usepackage[subfigure]{tocloft} % passing `subfigure' stops clash on compilation
 \usepackage{natbib}
 \usepackage{lineno}
+\usepackage[hyphens]{url}
 
 \input{macros}
 \input{declarns}
@@ -81,7 +82,7 @@ subfigure}
 \title
 {Optimising the design of buffer preparation in bioprocessing facilities}
 
-\author{Sean Tully, MA (\emph{Cantab.}), MEng}
+\author{Sean Tully, M.A. (\emph{Cantab.}), M.Eng.}
 
 \maketitle
 
@@ -119,7 +120,7 @@ University College Dublin
 
 %% Dedication
 \chapter*{Dedication} 
-To Seona
+To \ldots
 
 
 %% Table of Contents
@@ -153,8 +154,8 @@ I would like to thank \ldots
 \chapter*{Abstract} 
 It is intended that the abstract be used, while work is ongoing, as a brief
 summary of the state of progress of the dissertation.  The abstract shall be
-completed once the main body of the dissertation is complete.  It will contain
-a high-level overview of the work done in simple, plain language.
+completed once the main body of the dissertation is complete.  On completion, it
+will contain a high-level overview of the work done, in simple, plain language.
 %%\end{abstract}
 
 %%   List of important abbreviations (including special fonts, e.g.,
